--- a/assessment/events.html
+++ b/assessment/events.html
@@ -27,6 +27,7 @@
     <!--Embed or reference JavaScript + defer which tells the browser to download script in the background while HTML is being read and interpreted.-->
     <script type="module" src="./js/index.js" defer></script>
     <script type="module" src="./js/page_load_message.js" defer></script>
+    <script type="module" src="./js/events.js" defer></script>
 
     <!-- Appears in the browser tab and is used by search engines.-->
     <title>Events</title>
@@ -50,6 +51,25 @@
           <input type="text" placeholder="Search..." aria-label="Search">
           <button type="submit">Search</button>
         </div>
+
+        <div class="date-container">
+          <select name="month" class="datefield month"> <!--https://stackoverflow.com/questions/12928785/month-selection-dropdown-in-html-and-javascript-->
+            <option value="">Month</option>
+            <option value="01">Jan</option>
+            <option value="02">Feb</option>
+            <option value="03">Mar</option>
+            <option value="04">Apr</option>
+            <option value="05">May</option>
+            <option value="06">Jun</option>
+            <option value="07">Jul</option>
+            <option value="08">Aug</option>
+            <option value="09">Sep</option>
+            <option value="10">Oct</option>
+            <option value="11">Nov</option>
+            <option value="12">Dec</option>
+          </select>
+        </div>
+
         <div>
           <h2>Today</h2>
         </div>
@@ -61,47 +81,124 @@
           <button type="button">Sport</button>
         </div>
 
-        <!-- Slideshow container code reference: https://www.w3schools.com/howto/howto_js_slideshow.asp -->
-        <div id="events-slideshow" class="slideshow-container">
+
+        <!-- Slideshow container code reference: https://www.w3schools.com/howto/howto_js_slideshow.asp--> 
+        <div class="slideshow-container">
 
           <!-- Full-width images with number and caption text -->
-          <div class="mySlides fade">
-              <img src="./images/Carnival_Brazil.png" style="width:100%;" alt="Carnival">
-              <div class="text">Carnival</div>
+          <div class="mySlides">
+            <div class="slide-container">
+              <div class="image-container">
+                <img src="./images/Carnival_Brazil.png" style="width:100%;">
+                <div class="text">Carnival</div>
+              </div>
+              <div class="image-container">
+                <img src="./images/DJ_Night.png" style="width:100%;">
+                <div class="text">DJ Night</div>
+              </div>
+            </div>
           </div>
-          <div class="mySlides fade">
-            <img src="./images/DJ_Night.png" style="width:100%;" alt="DJ Night">
-            <div class="text">DJ Night</div>
-          </div>
-          <div class="mySlides fade">
-              <img src="./images/Music_Festival.png" style="width: 100%;" alt="Music Festival">
-              <div class="text">Music Festival</div>
-          </div>
-          <div class="mySlides fade">
-            <img src="./images/Night_Club.png" style="width:100%;">
-              <div class="text">Night Club</div>
-          </div>
+          <div class="mySlides">
+            <div class="slide-container">
+              <div class="image-container">
+                <img src="./images/Music_Festival.png" style="width: 100%;">
+                <div class="text">Music Festival</div>
+              </div>
 
-          <!-- Next and previous buttons -->
-          <!--Anchor tag used to perform an action.-->
-          <!--Onclick specifies when link is clicked, execute plusSlides with argument -1, indicating that function should show previous slide in slideshow.-->
-          <!--&#10094 represents special character (left-pointing arrow (◀)) in HTML character reference format.-->
+              <div class="image-container">
+                <img src="./images/Night_Club.png" style="width:100%;">
+                <div class="text">Night Club</div>
+              </div>
+
+            </div>
+          </div>
+        <!-- Next and previous buttons -->
+        <!--Anchor tag used to perform an action.-->
+        <!--Onclick specifies when link is clicked, execute plusSlides with argument -1, indicating that function should show previous slide in slideshow.-->
+        <!--&#10094 represents special character (left-pointing arrow (◀)) in HTML character reference format.-->
           <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-          <!--&#10095 represents a special character (right-pointing arrow)-->
           <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
         <br>
 
         <!-- The dots/circles -->
         <div style="text-align:left">
-          <!-- Indicate current slide-->
-           <!--Span - inline container to group content for styling or apply JS functions.-->
-           <!--Onclick attribute specifies that when dot is clicked, it executes a JS function called currentSlide with an argument of 1, 2,3 or 4 based on slide number-->
+        <!-- Indicate current slide-->
+        <!--Span - inline container to group content for styling or apply JS functions.-->
+        <!--Onclick attribute specifies that when dot is clicked, it executes a JS function called currentSlide with an argument of 1, 2,3 or 4 based on slide number-->
           <span class="dot" onclick="currentSlide(1)"></span>
           <span class="dot" onclick="currentSlide(2)"></span>
-          <span class="dot" onclick="currentSlide(3)"></span>
-          <span class="dot" onclick="currentSlide(4)"></span>
         </div>
+
+        <div>
+          <h2>Tomorrow</h2>
+        </div>
+
+        <section id="events-section">
+          <div class="event">
+            <div class="event-left">
+              <div class="event-left-top">
+                <img src="./images/budget.jpg" alt="Event 1">
+                <div class="event-name">Event 1</div>
+              </div>
+              <div class="event-left-bottom">
+                <img src="./images/cultural.jpg" alt="Event 2">
+                <div class="event-name">Event 2</div>
+              </div>
+            </div>
+            <div class="event-right">
+              <div class="event-right-top">
+                <img src="./images/Carnival_Brazil.png" alt="Event 3">
+                <div class="event-name">Event 3</div>
+              </div>
+              <div class="event-right-middle">
+                <img src="./images/cultural.jpg" alt="Event 4">
+                <div class="event-name">Event 4</div>
+              </div>
+              <div class="event-right-bottom">
+                <img src="./images/DJ_Night.png" alt="Event 5">
+                <div class="event-name">Event 5</div>
+              </div>
+            </div>
+          </div>
+          <!-- Add more event blocks as needed -->
+        </section>
+
+        <div class="wrapper">
+          <h2>Enter event details</h2>
+          <div class="form-container">
+            <form id="eventForm">
+                <label for="event_name">Event name</label>
+                <input type="text" id="event_name" name="event_name" placeholder="Search..." required>
+
+                <label for="location">Location</label>
+                <input type="text" id="location" name="location" placeholder="Search..." required>
+
+                <label for="organiser">Organiser</label>
+                <input type="text" id="organiser" name="organiser" placeholder="Search..." required>
+
+                <label for="event_type">Event Type</label>
+                <input type="text" id="event_type" name="event_type" placeholder="Search..." required>
+
+                <label for="description">Description</label>
+                <textarea id="description" name="description" rows="4" placeholder="Search..." required></textarea>
+
+                <label for="date_time">Date & Time</label>
+                <input type="datetime-local" id="date_time" name="date_time" required>
+
+                <label for="genericevent_photo">Upload photo</label>
+                <input type="file" id="genericevent_photo" name="genericevent_photo">
+
+                <button type="submit" class="btn btn-action">Post Your Event</button>
+                <div id="submitResponse" class="mt-3 mb-2" role="alert" aria-live="assertive"></div>
+              </form>
+          </div>
+        </div>
+      </div>
+
+
+
+
       </main>
     </div>
   This is some test text.
